--- a/sign-up.html
+++ b/sign-up.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign-up</title>
     <link href="sign-up.css" rel="stylesheet">
+    <link rel="shortout icon" type="image/x-icon" href="./Images/2.png">
 </head>
 
 <body>
